fix: missing padding on nested ordered lists (closes #84)

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/typographie/_typographie.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/typographie/_typographie.scss
@@ -110,10 +110,10 @@ ol {
 	> li {
 		counter-increment: item;
 
-		> li {
+		> ol > li {
 			padding-left: 2.5em;
 
-			> li {
+			> ol > li {
 				padding-left: 3em;
 			}
 		}
